[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.11.0",
    "ruff>=0.1.6",
]

[tool.pdm.build]
includes = ["cs4100_final_project"]
[project]
name = "cs4100-final-project"
version = "0.1.0"
description = "A package that helps visualize the \"best path\" to graduation for CS@NEU."
authors = [
    { name = "Oliver Nemec", email = "28827159+onemec@users.noreply.github.com" },
    { name = "Dylan Pham", email = "32346117+dylan-pham@users.noreply.github.com" },
]
dependencies = [
    "networkx>=3.2.1",
    "matplotlib>=3.8.2",
    "Pydantic>=2.5.2",
]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = { text = "MIT" }
